--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Shapeshift is a game I made for the Bevy Game Jam #2.
+Shapeshift is a game by Eliot Bo. It was made for the Bevy Game Jam #2.
 
-Credit goes to Francis Gregoire for the sounds, Charles Riendeau and Genevieve Gariepy many levels.
+Credit goes to Francis Gregoire for the sounds, Charles Riendeau and Genevieve Gariepy for many levels.
 
-The code for Shapeshift is licensed under MIT or Apache, at your option.
+The code for Shapeshift is licensed under MIT or Apache, at your option, but the assets cannot be copied.
